style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  max-width: 378px;
  font-family: "poppins", sans-serif;
  background-color: #f7f7f9;
}

html {
  font-family: "poppins", sans-serif;
}

ul {
  list-style: none;
}

.logo {
  font-weight: bold;
  text-decoration: none;
  color: #6070ff;
  animation: logoRotation 2s linear;
  animation-iteration-count: 1;
}

@keyframes logoRotation {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.header {
  display: flex;
  justify-content: space-between;
  padding: 20px 30px 30px 30px;
  color: #6070ff;
  font-size: 25px;
}

.header-links {
  display: flex;
  display: none;
  list-style: none;
  justify-content: space-between;
}

.header-links a {
  text-decoration: none;
  color: #344563;
  float: left;
}

/* ☎ ☎ ☎ MOBILE VERSION STLYLE ☎ ☎ */
.grid-works {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: repeat(4, 650px);
  gap: 10px 100px;
  padding: 40px 50px;
  background-color: #f7f7f9;
}

.child-worksCard-info {
  padding: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: #fff;
  border: 2px solid #dfe1e6;
  border-radius: 15px;
  line-height: 50px;
  transition: transform 0.5s linear;
}

.child-worksCard-info:hover {
  transform: scale(1.1);
}

.child-worksCard-info img {
  transition: all 0.5s;
}

.child-worksCard-info img:hover {
  transform: scale(1.06);
}

.prjct-title {
  padding: 20px 0;
  line-height: 1.5;
  font-size: 40px;
  font-weight: bold;
  color: #091e42;
}

.multi-post {
  padding: 5px 0;
}

.prjct-info {
  display: flex;
  justify-content: space-between;
  width: 250px;
  color: #c1c7d0;
  font-size: 18px;
}

.canopy {
  color: #344563;
}

.prjct-info .dot-separator {
  margin-top: 20px;
  background-color: #c1c7d0;
  height: 8px;
  width: 8px;
  border-radius: 50%;
  border: none;
}

.works-card1 .description {
  padding: 20px 15px 20px 0;
  color: #344563;
  line-height: 1.4;
}

.pro-languages {
  display: flex;
  justify-content: space-between;
  width: 250px;
  font-size: 18px;
  color: #6070ff;
}

.pro-languages li {
  padding: 4px 12px;
  background-color: #ebebff;
  margin-right: 8px;
  border-radius: 8px;
  cursor: pointer;
}

.pro-languages li:hover {
  background-color: #6070ff;
  color: #fff;
  transition: all 0.5s;
}

.see-prjct {
  width: 150px;
  font-size: 17px;
  padding: 10px 3px;
  letter-spacing: 0.5px;
  color: #396df2;
  border-radius: 8px;
  background-color: #fff;
  border: 1px solid #396df2;
  margin-top: 15px;
  cursor: pointer;
  transition: all 0.3s linear;
}

.card-description {
  display: flex;
  flex-direction: column;
  font-family: "poppins", sans-serif;
}

.card-description .see-prjct {
  float: none;
}

.lang-left .see-prjct {
  float: left;
}

.see-prjct:hover {
  background-color: #6070ff;
  color: #fff;
  transform: scale(1.1);
}

/* Part of About self section style */
.about-section-container {
  background-color: #f7f7f9;
}

.about-section-card {
  border-top-right-radius: 70px;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 90vh;
  padding: 150px 30px 40px 30px;
}

.about-self-card {
  padding: 10px 20px;
}

.lang-arrow-container {
  display: flex;
  justify-content: space-between;
  padding: 25px 20px 25px 0;
  font-size: 20px;
  font-weight: bold;
}

.language-container {
  display: flex;
  align-items: center;
  padding: 8px 0 8px 10px;
  background-color: #f7f7f9;
  position: relative;
  border-radius: 8px;
  margin-bottom: 15px;
}

.language {
  display: flex;
  justify-content: flex-start;
  padding: 0 10px;
  font-size: 15px;
  font-weight: bold;
}

.css-html-lng {
  display: flex;
  justify-content: flex-start;
}

.frame-skl-container {
  display: flex;
  justify-content: space-between;
  padding: 6px 20px 20px 0;
  font-size: 20px;
  font-weight: bold;
}

/* Portifolio mobile set up skeleton */
.hdln-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 90vh;
  padding: 0 30px;
  background-image: url(./images/header-shapes\ mobile.png);
  background-repeat: no-repeat;
  position: relative;
}

.hdln-img-container {
  display: none;
}

.name-intro {
  font-size: 48px;
  font-weight: bold;
  line-height: 1.3;
  font-family: "poppins", sans-serif;
  color: #091e42;
}

.personal-info {
  font-size: 17px;
  padding: 20px 0;
  color: #344563;
}

.connect a {
  font-size: 20px;
  color: #7f8cff;
  text-decoration: none;
}

.social {
  display: flex;
  justify-content: space-between;
  max-width: 150px;
  list-style: none;
  padding-top: 20px;
}

.social a {
  color: rgba(0, 0, 0, 0.6);
  padding: 10px 10px 10px 0;
  margin-right: 5px;
  font-size: 25px;
}

/* CONTACT FORM STYLE */
#footer {
  background-color: #6070ff;
  position: relative;
  background-image: url(./images/header-shapesmobile.png);
  background-size: contain;
  background-repeat: no-repeat;
  border-top-left-radius: 110px;
  background-position: center;
  margin-top: 50px;
}

.contact-descr {
  text-align: center;
  max-width: 500px;
  padding-top: 100px;
  margin: 0 auto;
}

.parent-form {
  text-align: center;
  padding: 90px 25px 10px 25px;
}

.contact-heading {
  color: #fff;
  font-size: 40px;
  font-weight: bold;
}

.contact-description {
  font-size: 20px;
  color: #ebebff;
  padding: 40px 0;
  transition: transform 0.4s linear;
}

.contact-description:hover {
  transform: translate(10px);
}

.inputs-holder {
  display: flex;
  flex-direction: column;
}

.inputs-holder input {
  border-radius: 8px;
  padding: 15px;
  border: none;
  margin-bottom: 18px;
  font-size: 17px;
  color: #000;
}

.message {
  color: #b3bcc5;
  font-size: 15px;
  max-width: 326px;
  min-width: 326px;
  min-height: 170px;
  max-height: 170px;
  border-radius: 8px;
  padding: 15px;
}

/* DESKTOP VERSION MEDIA QUERY */
@media (min-width: 376px) {
  body {
    max-width: 100%;
  }

  .grid-works {
    grid-template-rows: repeat(4, 650px);
  }

  .parent-form .inputs-holder {
    width: 330px;
    margin: 0 auto 20px auto;
  }

  .inputs-holder input {
    width: 100%;
  }
}

@media (min-width: 500px) {
  body {
    max-width: 100%;
  }

  .grid-works {
    grid-template-rows: repeat(4, 700px);
  }
}

@media (min-width: 500px) {
  body {
    max-width: 100%;
  }

  .grid-works {
    grid-template-rows: repeat(4, 850px);
  }

  .see-prjct-footer {
    display: block;
    margin: 10px auto 0 auto;
  }
}

@media (min-width: 768px) {
  body {
    max-width: 100%;
  }

  .grid-works {
    grid-template-rows: repeat(4, 450px) !important;
    gap: 10px 50px;
    padding: 40px 30px;
    background-color: #f7f7f9;
  }

  .header-links {
    display: block;
    font-size: 15px;
  }

  .header-links li {
    display: inline-block;
    margin-right: 10px;
  }

  .fa-bars {
    display: none;
  }

  .hdln-section {
    background-color: #fff;
    height: 600px;
    background-image: url(./images/back-header.png);
    background-size: contain;
    background-position: right;
    border-bottom-left-radius: 100px;
    margin-bottom: 90px;
  }

  .banner-text-container {
    position: absolute;
    top: 30%;
    left: 15%;
    max-width: 800px;
  }

  .child-worksCard-info {
    flex-direction: row;
    justify-content: center;
  }

  .reversed-card2-4 {
    flex-direction: row-reverse;
  }

  .works-card1 {
    width: 85%;
    margin: -60px auto;
  }

  .card-description {
    margin-left: 35px;
    max-width: 60%;
  }

  .about-section-card {
    flex-direction: row;
    padding-left: 80px;
    justify-content: left;
    position: relative;
    align-items: center;
  }

  .name-intro {
    font-size: 40px;
    font-weight: 700;
    line-height: 1.1;
  }

  .lang-left {
    max-width: 40%;
    padding-left: 0;
  }

  .lang-right {
    max-width: 60%;
    padding-left: 10px;
  }

  .lang-box {
    float: left;
    margin-right: 5px;
    margin-bottom: 30px;
    padding: 5px 35px 40px 5px;
    position: relative;
  }

  .lang-box p {
    position: absolute;
    top: 60px;
    left: 10px;
    font-size: 16px;
  }

  .about-section-container {
    width: 100%;
  }

  .lang-arrow-container {
    position: absolute;
    width: 50%;
    top: 30%;
  }

  .language-container {
    background-color: #f7f7f9;
    color: #253858;
  }

  .frame-Skill {
    position: absolute;
    top: 70%;
    width: 50%;
    padding-right: 20px;
    font-family: "poppins", sans-serif;
    color: #344563;
  }

  .ekilaka {
    height: 150px;
    background-color: #fff;
    width: 100%;
  }

  #footer {
    background-color: #6070ff;
    background-image: url(./images/back-footer.png);
    height: 949px;
    width: 100%;
    background-size: contain;
    background-position: bottom;
    margin-top: -85px;
  }

  .mini-footer {
    padding-top: 100px;
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
  }

  .parent-form {
    max-width: 600px;
    height: 60%;
    padding-top: 10px;
  }

  .parent-form .inputs-holder {
    width: 100%;
  }

  .inputs-holder input {
    width: 100%;
    border-radius: 0;
  }

  .parent-form .message {
    border-radius: 0;
    width: 100%;
  }

  .see-prjct-footer {
    display: block;
    margin: 10px auto 0 auto;
  }

  .contact-descr {
    text-align: center;
  }
}

